--- a/app/templates/STORE.html
+++ b/app/templates/STORE.html
@@ -3930,7 +3930,7 @@ window.application = new Application();
 			<span>STORE</span>
 		</div>
 		<div onclick="application.goToTargetView(event)" id="DISEASE_CHECKER">
-			<a href="{{ url_for('disease_prediction') }}"><span>DISEASE CHECKER</span></a>
+			<a href="{{ url_for('disease_prediction') }}"><span>DISEASE DETECTION</span></a>
 		</div>
 		<div onclick="application.goToTargetView(event)" id="INITIATIVE_PURPOSE">
 			<a href="{{ url_for('blog_english') }}"><span>BLOG </span></a>
@@ -3940,7 +3940,7 @@ window.application = new Application();
 			</rect>
 		</svg>
 		<div onclick="application.goToTargetView(event)" id="CROP_DETECTION">
-			<a href="{{ url_for('crop_recommend') }}"><span>CROP DETECTION</span></a>
+			<a href="{{ url_for('crop_recommend') }}"><span>CROP PREDICTION</span></a>
 		</div>
 	</div>
 	<div id="Group_25">
@@ -4021,7 +4021,7 @@ window.application = new Application();
 	</div>
 	<div id="Group_37">
 		<div id="PLANT_FOOD_Rs299">
-			<span style="text-transform:capitalize;">PLANT FOOD</span><br><span>Rs.299</span>
+			<span style="text-transform:capitalize;">PLANT FOOD</span><br><span>TSH 35000</span>
 		</div>
 		<svg class="Rectangle_46">
 			<rect id="Rectangle_46" rx="0" ry="0" x="0" y="0" width="78" height="41">
@@ -4033,7 +4033,7 @@ window.application = new Application();
 	</div>
 	<div id="Group_38">
 		<div id="Copper_Fungicide_Rs599">
-			<span>Copper Fungicide</span><br><span style="font-size:20px;">Rs.599</span>
+			<span>Copper Fungicide</span><br><span style="font-size:20px;">TSH 67000</span>
 		</div>
 		<svg class="Rectangle_46_bx">
 			<rect id="Rectangle_46_bx" rx="0" ry="0" x="0" y="0" width="78" height="41">
@@ -4045,7 +4045,7 @@ window.application = new Application();
 	</div>
 	<div id="Group_39">
 		<div id="PLANT_FOOD_Rs399">
-			<span style="text-transform:capitalize;">PLANT FOOD</span><br><span>Rs.399</span>
+			<span style="text-transform:capitalize;">PLANT FOOD</span><br><span>TSH 20000</span>
 		</div>
 		<svg class="Rectangle_46_b">
 			<rect id="Rectangle_46_b" rx="0" ry="0" x="0" y="0" width="78" height="41">
@@ -4057,7 +4057,7 @@ window.application = new Application();
 	</div>
 	<div id="Group_40">
 		<div id="Pesticide_Rs299">
-			<span>Pesticide<br/>Rs.299</span>
+			<span>Pesticide<br/>TSH 48000</span>
 		</div>
 		<svg class="Rectangle_46_ca">
 			<rect id="Rectangle_46_ca" rx="0" ry="0" x="0" y="0" width="78" height="41">
@@ -4069,7 +4069,7 @@ window.application = new Application();
 	</div>
 	<div id="Group_41">
 		<div id="Spray_Rs999">
-			<span>Spray<br/>Rs.999</span>
+			<span>Spray<br/>TSH 80000</span>
 		</div>
 		<svg class="Rectangle_46_cb">
 			<rect id="Rectangle_46_cb" rx="0" ry="0" x="0" y="0" width="78" height="41">
@@ -4081,7 +4081,7 @@ window.application = new Application();
 	</div>
 	<div id="Group_42">
 		<div id="Insecticide_Rs399">
-			<span>Insecticide<br/>Rs.399</span>
+			<span>Insecticide<br/>TSH 24000</span>
 		</div>
 		<svg class="Rectangle_46_cd">
 			<rect id="Rectangle_46_cd" rx="0" ry="0" x="0" y="0" width="78" height="41">
@@ -4093,7 +4093,7 @@ window.application = new Application();
 	</div>
 	<div id="Group_43">
 		<div id="Organic_Fungicide_Rs499">
-			<span>Organic Fungicide</span><br><span style="font-size:20px;">Rs.499</span>
+			<span>Organic Fungicide</span><br><span style="font-size:20px;">TSH 35000</span>
 		</div>
 		<svg class="Rectangle_46_ch">
 			<rect id="Rectangle_46_ch" rx="0" ry="0" x="0" y="0" width="78" height="41">
@@ -4105,7 +4105,7 @@ window.application = new Application();
 	</div>
 	<div id="Group_44">
 		<div id="All-in-1_Rs599">
-			<span>All-in-1<br/>Rs.599</span>
+			<span>All-in-1<br/>TSH 40000</span>
 		</div>
 		<svg class="Rectangle_46_cl">
 			<rect id="Rectangle_46_cl" rx="0" ry="0" x="0" y="0" width="78" height="41">
@@ -4122,7 +4122,7 @@ window.application = new Application();
 		<span>TAX</span>
 	</div>
 	<div id="GST18">
-		<span>GST(18%)</span>
+		<span>VAT(18%)</span>
 	</div>
 	<svg class="Rectangle_47">
 		<rect id="Rectangle_47" rx="0" ry="0" x="0" y="0" width="128" height="22">
@@ -4131,7 +4131,7 @@ window.application = new Application();
 	<div id="Proceed_to_pay">
 		<span>Proceed to pay</span>
 	</div>
-	<img  id="Logo" src="{{ url_for('static', filename='images/logo.png') }}" >
+	<img  id="Logo" src="{{ url_for('static', filename='images/logo.jpg') }}" >
 		
 </div>
 
