--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,15 +9,15 @@
 					<div class="overlay">
 						<div class="container">
 							<div class="w3layouts-banner-info text-center">
-								<h3 class="text-wh">Kheti Kaksha</h3>
+								<h3 class="text-wh">AGRO-SMART</h3>
 								<h4 class="text-wh mx-auto my-4"><b>Get informed decisions about your farming strategy.</b></h4>
 								<br>
-								<!-- <h4 class="text-wh mx-auto my-4"><strong> Here are some questions we'll answer</strong></h4>
+								 <h4 class="text-wh mx-auto my-4"><strong> Here are some questions we'll answer</strong></h4>
 								<p class="text-li mx-auto mt-2">
 									1. What crop to plant here? <br>
 									2. What fertilizer to use? <br>
 									3. Which disease do your crop have?<br>
-									4. How to cure the disease?</p> -->
+									4. How to cure the disease?</p>
 							</div>
 						</div>
 					</div>
@@ -35,7 +35,7 @@
 				<img src="{{ url_for('static', filename='images/core.png') }}" class="img-fluid" alt="" />
 			</div>
 			<div class="col-lg-6 core-right">
-				<h3> Namaste!!</h3>
+				<h3> HELLO</h3>
 				<p class="mt-3">            
 
 Welcome Family,
@@ -47,7 +47,7 @@ Welcome Family,
 <h3>COMING SOON </h3>
 <p class="mt-3">       
 Tutorial classes on farming
-A Costumer Base to sell your contract crop
+A Customer Base to sell your contract crop
 A reselling store in collaboration with
 Meesho</p>
 			</div>
