--- a/app/templates/try_again.html
+++ b/app/templates/try_again.html
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="col-sm py-2 py-md-3">
       <div class="card card-body" style="justify-content: center; background-color:blanchedalmond">
-        <h1 class="text-center" style="color: black; font-size: 20px;"><b>Sorry we couldn't process your request
+        <h1 class="text-center" style="color: black; font-size: 20px;"><b>Sorry AGRO-SMART couldn't process your request
             currently. <br> Please try again</b></h1>
 
 
