--- a/app/templates/crop.html
+++ b/app/templates/crop.html
@@ -94,7 +94,7 @@
       />
     </div>
     <div class="form-group">
-      <label for="State" style="font-size: 17px "><b>State</b></label>
+      <label for="State" style="font-size: 17px "><b>Region</b></label>
       <select
         onchange="print_city('state', this.selectedIndex);"
         id="sts"
@@ -105,7 +105,7 @@
         required
       ></select>
       <br />
-      <label for="City" style="font-size: 17px"><b>City</b></label>
+      <label for="City" style="font-size: 17px"><b>District</b></label>
       <select
         id="state"
         class="form-control"
